@@ -12,6 +12,7 @@ HBase Change Log
    HBASE-663   Incorrect sequence number for cache flush
    HBASE-652   Dropping table fails silently if table isn't disabled 
    HBASE-674   Memcache size unreliable
+   HBASE-665   server side scanner doesn't honor stop row
 
 Release 0.1.2 - 05/13/2008
 
